--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.samaxes.maven</groupId>
     <artifactId>minify-maven-plugin</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.0-codenjoy</version>
     <packaging>maven-plugin</packaging>
 
     <name>Minify Maven Plugin</name>
